# pastebin-drf-api

./: .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.no_venv  README.md  docker-compose-prod_template.yml  docker-compose.yml  drun  env  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  run  setup.cfg
.github/workflows/: nox-audit_multi-arch.yml  nox-coverage.yml  nox-lint_multi-arch.yml  nox-safety_multi-arch.yml
accounts/: admin.py  models.py  views.py
accounts/migrations/: 0001_initial.py
accounts/tests/: factories.py  test_views.py
config/: settings.py  urls.py
docs/: add_code_list.rst  application_urls.rst  changelog.rst  conf.py  contributing.rst  features.rst  index.rst  installing.rst  package_index.md  package_index.rst  testing.rst
htmlcov/: class_index.html  coverage.json  d_1ea838694151cac8_test_py.html  d_1ea838694151cac8_urls_py.html  d_509fd8af0f7a1b49_admin_py.html  d_509fd8af0f7a1b49_apps_py.html  d_509fd8af0f7a1b49_forms_py.html  d_509fd8af0f7a1b49_models_py.html  d_509fd8af0f7a1b49_urls_py.html  d_509fd8af0f7a1b49_views_py.html  d_9df13ddeb1e47e46_admin_py.html  d_9df13ddeb1e47e46_apps_py.html  d_9df13ddeb1e47e46_forms_py.html  d_9df13ddeb1e47e46_models_py.html  d_9df13ddeb1e47e46_urls_py.html  d_9df13ddeb1e47e46_views_py.html  d_9df3908b71d7fe67_test_views_py.html  d_b88c3b5a8ce6a61b_test_forms_py.html  d_b88c3b5a8ce6a61b_test_views_py.html  d_dfdacaa496597cde_test_forms_py.html  d_dfdacaa496597cde_test_models_py.html  d_dfdacaa496597cde_test_urls_py.html  d_dfdacaa496597cde_test_views_py.html  d_f374a468d182ae55_admin_py.html  d_f374a468d182ae55_apps_py.html  d_f374a468d182ae55_models_py.html  d_f374a468d182ae55_permissions_py.html  d_f374a468d182ae55_serializers_py.html  d_f374a468d182ae55_tests_py.html  d_f374a468d182ae55_urls_py.html  d_f374a468d182ae55_views_py.html  function_index.html  index.html  status.json  z_1ea838694151cac8_test_py.html  z_1ea838694151cac8_urls_py.html  z_509fd8af0f7a1b49_admin_py.html  z_509fd8af0f7a1b49_apps_py.html  z_509fd8af0f7a1b49_forms_py.html  z_509fd8af0f7a1b49_models_py.html  (+22 more)
pages/: urls.py
pages/tests/: test_views.py
snippets/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
snippets/migrations/: 0001_initial.py  0002_alter_snippet_options.py  0002_snippet_language_alter_snippet_linenos.py  0003_alter_snippet_language.py
snippets/tests/: test_views.py
static/css/: base.css
staticfiles/: staticfiles.json
staticfiles/css/: base.css
staticfiles/rest_framework/css/: bootstrap-theme.min.3ed36071b85b.css  bootstrap.min.76352a623c64.css
templates/: base.html
templates/account/: email.html  email_confirm.html  password_change.html  password_reset.html  signup.html  user_detail.html
templates/admin/: base_site.html
templates/pages/: about.html  home.html
templates/snippets/: snippets_list.html
templates/socialaccount/: login.html
templates/socialaccount/github/: login.html
