[tool.black]
line-length = 79
# include =
exclude = '''
/(
    \.git
  | __pycache__
  | .pytest_cache
  | .venv
  | build
  | dist
  | snippets/migrations/*
  | snippets/migrations
  | ^.*\b(migrations)\b.*$
)/
'''
[tool.coverage.paths]
source = ["config", "snippets"]

[tool.coverage.run]
branch = true
source = ["config"]
omit = [
    "*/__init__.py",
    "*manage.py",
    "*settings*.py",
    "*urls.py",
    "*admin.py",
    "*migrations/*",
    "*tests/*",
    "*test_*.py",
    "*tests.py",
    "*wsgi.py",
    "*conftest.py",
    "*/extra*",
]

[tool.coverage.report]
show_missing = true

[tool.isort]
profile = "black"
multi_line_output = 3
skip = ["*.gitignore"]
extend_skip = ["*.md", "*.json"]
line_length = 119

[tool.poetry]
name = "pastebin-drf-api"
version = "0.1.0"
description = "A simple pastebin code highlighting Web API"
authors = ["Kevin Bowen <kevin.bowen@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
djangorestframework = "^3.13.1"
Pygments = "^2.11.2"
environs = "^9.5.0"
dj-database-url = "^0.5.0"
dj-email-url = "^1.0.5"
django-cache-url = "^3.4.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pre-commit = "^2.18.1"
flake8 = "^4.0.1"
isort = "^5.10.1"
httpie = "^3.1.0"
django-debug-toolbar = "^3.4.0"
coverage = {extras = ["toml"], version = "^6.4.1"}
pytest-cov = "^3.0.0"
pytest-django = "^4.5.2"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
filterwarnings = [
    "ignore::django.utils.deprecation.RemovedInDjango50Warning",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
