[tool.black]
line-length = 79
# include =
exclude = '''
/(
    \.git
  | __pycache__
  | .pytest_cache
  | .venv
  | build
  | dist
  | snippets/migrations/*
  | snippets/migrations
  | ^.*\b(migrations)\b.*$
)/
'''

[tool.coverage.paths]
source = ["accounts", "config", "pages", "snippets"]

[tool.coverage.run]
branch = true
source = ["config"]
omit = [
    "*/__init__.py",
    "*manage.py",
    "*settings*.py",
    "*urls.py",
    "*admin.py",
    "*migrations/*",
    "*tests/*",
    "*test_*.py",
    "*tests.py",
    "*wsgi.py",
]
plugins = [
    "django_coverage_plugin",
]

[tool.coverage.django_coverage_plugin]
template_extensions = "html, txt, tex, email"

[tool.coverage.report]
show_missing = true

[tool.poetry]
name = "pastebin-drf-api"
version = "0.1.0"
description = "A simple pastebin code highlighting Web API"
authors = ["Kevin Bowen <kevin.bowen@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.1.5"
djangorestframework = "^3.13.1"
django-extensions = "^3.2"
Pygments = "^2.11.2"
environs = "^9.5.0"
dj-database-url = "^1.0.0"
dj-email-url = "^1.0.5"
django-cache-url = "^3.4.0"
psycopg2-binary = "^2.9.5"
gunicorn = "~=20.1.0"
whitenoise = "^6.2.0"
django-allauth = "^0.52.0"
django-countries = "^7.3.2"
Pillow = "^9.2.0"
django-bootstrap4 = "^22.2"
django-crispy-forms = "^1.14.0"
drf-spectacular = "^0.25.0"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
pre-commit = "^3.0.0"
flake8 = "^6.0.0"
httpie = "^3.1.0"
django-debug-toolbar = "^3.4.0"
coverage = {extras = ["toml"], version = "^7.0.0"}
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"
django-test-plus = "^2.2.0"
pytest-sugar = "^0.9.4"
ipython = "^8.4.0"
friendly = "^0.7.0"
colorama = "^0.4.4"
pytest = "^7.1.2"
django-coverage-plugin = "^3.0.0"
nox = "^2022.1.7"
flake8-bandit = "^4.0.0"
flake8-black = "^0.3.3"
flake8-bugbear = "^23.0.0"
flake8-docstrings = "^1.6.0"
safety = "^2.3.5"
factory-boy = "3.0.1"
pip-check = "^2.7"
pip-audit = "^2.4.3"
Sphinx = "^6.1.0"
flake8-import-order = "^0.18.2"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
filterwarnings = [
    # "ignore::django.utils.deprecation.RemovedInDjango50Warning",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
