[metadata]
name = pastebin-drf-api
version = 0.1.0
url = https://github.com/kevinbowen777/pastebin-drf-api
author = Kevin Bowen
author_email = kevin.bowen@gmail.com
description = A pastebin code highlighting Web API using Django Rest Framework
long_description = file: README.md
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
project_urls =
    Source = https://github.com/kevinbowen777/pastebin-drf-api/

[options]
python_requires = >=3.9
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    Django >= 4.0.4

[flake8]
select = B,B9,BLK,C,E,F,I,S,W
application-import-names = tests
docstring-convention = google
import-order-style = google
max-complexity = 10
max-line-length = 79
# https://flake8.pycqa.org/en/latest/user/configuration.html
exclude =
    conftest.py
    # No need to traverse git directory
    .git,
    # Skip cache directories
    __pycache__,
    build,
    .env,
    accounts/migrations/*,
    pages/migrations/*,
    snippets/migrations/*,
    dist,
    images/
# https://www.flake8rules.com
ignore =
    # falsely triggers on list slicing
    E203
    # import at top, avoid circular imports
    E402
    E501
    # bare except
    E722
    W503
per-file-ignores =
    accounts/tests.py:S101,S106
    accounts/tests/*:S101,S106
    config/tests.py:S101,S106
    config/tests/*:S101,S106
    pages/tests.py:S101,S106
    pages/tests/*:S101,S106
    snippets/tests.py:S101,S106
    snippets/tests/*:S101,S106
    # __init__ exports names
    # app/crud/__init__.py: F401
    # app/schemas/__init__.py: F401
    # app/tests/conftest.py: E501
